--- a/configs/models/symphonies.yaml
+++ b/configs/models/symphonies.yaml
@@ -4,13 +4,15 @@ model:
   type: Symphonies
   embed_dims: 128
   num_layers: 3
+  num_queries: 200 #(per image queries. for multi view, total queries will be num_queries*6)
   view_scales: [4, 8, 16]
   encoder:
     type: MMDetWrapper
     config_path: maskdino/configs/maskdino_r50_8xb2-panoptic-export.py
     custom_imports: maskdino
-    checkpoint_path: ../../backups/maskdino_r50_50e_300q_panoptic_pq53.0.pth
-  criterions: [ce_ssc, sem_scal, geo_scal, frustum]
+    checkpoint_path: maskdino/maskdino_r50_50e_300q_panoptic_pq53.0.pth
+    freeze: True
+  criterions: [ce_ssc, sem_scal, geo_scal]
 
 optimizer:
   paramwise_cfg:
